--- a/package.json
+++ b/package.json
@@ -13,20 +13,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.0",
-    "@angular/common": "^5.2.0",
+    "@angular/common": "^5.2.9",
     "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
+    "@angular/core": "^5.2.9",
     "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
+    "@angular/http": "^5.2.9",
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular-in-memory-web-api": "^0.5.4",
     "core-js": "^2.4.1",
-    "rxjs": "^5.5.6",
+    "rxjs": "^5.5.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "~1.7.3",
+    "@angular/cli": "^1.7.4",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
